# automatizar_tareas_enviar_email

./: README.md  position_puntero.ipynb  proyecto.py  pyproject.toml
