[project]
name = "automatizar-tareas-enviar-email"
version = "0.1.0"
description = ""
authors = [
    {name = "Vivian"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.54,<0.3.0)",
    "pyautogui (>=0.9.54,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
